[project]
name = "webapp-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "pillow==11.2.1",
    "streamlit==1.22.0",
    "streamlit-image-select==0.6.0",
    "torch==2.0.1",
    "transformers==4.29.2",
]
